@@ -14,6 +14,7 @@
 * The include() function will now include each file only once
 * The include() function can now include specific files
 * path.translate() now defaults to Windows-style backslashes
+* Added NoWarnings flag for Visual Studio (xpol)
 
 
 -------
